[metadata]
name = mpd-art-box
version = attr: mpd_art_box.version
url = https://github.com/nvllsvm/mpd-art-box
author = Andrew Rabert
author_email = ar@nullsum.net
description = A window containg the cover art for the currently playing MPD song - nothing more
long_description = file: README.md
long_description_content_type = text/markdown

[options]
py_modules = mpd_art_box
install_requires =
    configargparse
    pygobject
    python-mpd2>=2

[options.entry_points]
console_scripts =
    mpd-art-box = mpd_art_box:main
